Fix alignments search block
- Aligned placeholder and button text
- Fixed display of info icon

--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ header .logo {
 
 #form-input-geolocation {
     height: 48px;
-    padding: 16px;
+    padding: 0 16px;
     border-top: 1px solid var(--main-bg-color);
     border: 1px solid var(--main-bg-color);
     border-right: none;
@@ -151,7 +151,7 @@ header .logo {
     color: #fff;
     font-weight: 700;
     font-size: 18px;
-    padding: 16px;
+    padding: 0 16px;
     border: none;
     border-radius: 0px 15px 15px 0px;
 }
@@ -198,13 +198,19 @@ header .logo {
     margin: 16px 18px 16px 8px;
 }
 
+.info-results-number {
+    display: flex;
+    align-items: center;
+}
+
 .info-results-number i {
     height: 24px;
     width: 24px;
-    font-size: 14px;
-    text-align: center;
-    vertical-align: middle;
-    border-radius: 50%;
+    font-size: 12px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
     border: 1px solid #d9d9d9;
 }
 
